<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ReadIt</string>
    <string name="none">none</string>
    <string name="connect_account">Connect Readability Account</string>
    <string name="read">Read!</string>
    <string name="authorize">or authorize your readability account to access the features below</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add">Add</string>
    <string name="sync">Sync</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="clear_database">Clear database</string>
    <string name="title">Title</string>
    <string name="newspaper">Newspaper</string>
    <string name="left_shift">  &lt;&lt;  </string>
    <string name="right_shift">  &gt;&gt; </string>
</resources>
