<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:background="#E7E6E2" android:layout_width="fill_parent">
	<RelativeLayout android:padding="12dp"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/button_readnow" android:text="@string/read"
			android:layout_alignParentRight="true" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</Button>
		<EditText android:id="@+id/edittext_url" android:inputType="textFilter"
			android:maxLength="3000" android:layout_toLeftOf="@id/button_readnow"
			android:imeOptions="actionGo" android:singleLine="true"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
		</EditText>
	</RelativeLayout>
	<TextView android:paddingLeft="40dp" android:paddingRight="40dp"
		android:paddingTop="0dp" android:paddingBottom="0dp"
		android:layout_width="fill_parent" android:gravity="center"
		android:layout_height="wrap_content" android:typeface="serif"
		android:textColor="#62605D"
		android:text="@string/authorize" />
	<TableLayout android:gravity="center_horizontal"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<TableRow android:padding="12dp">
			<LinearLayout android:gravity="center"
				android:layout_weight="1" android:layout_width="0dip"
				android:orientation="vertical" android:layout_height="wrap_content">
				<ImageView android:id="@+id/button_bookmarks"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:src="@drawable/icon_read2" />
				<TextView android:text="@string/bookmarks" android:layout_width="wrap_content"
					android:textColor="#62605D" android:layout_height="wrap_content" />
			</LinearLayout>
			<LinearLayout android:gravity="center"
				android:orientation="vertical" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content">
				<ImageView android:id="@+id/button_add"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:src="@drawable/icon_add" />
				<TextView android:text="@string/add" android:layout_width="wrap_content"
					android:textColor="#62605D" android:layout_height="wrap_content" />
			</LinearLayout>

		</TableRow>
		<TableRow android:padding="12dp">
			<LinearLayout android:gravity="center"
				android:orientation="vertical" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content">
				<ImageView android:id="@+id/button_sync"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:src="@drawable/icon_sync" />
				<TextView android:text="@string/sync" android:layout_width="wrap_content"
					android:textColor="#62605D" android:layout_height="wrap_content" />
			</LinearLayout>
			<LinearLayout android:gravity="center"
				android:orientation="vertical" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content">
				<ImageView android:id="@+id/button_help"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:src="@drawable/icon_help" />
				<TextView android:text="@string/help" android:layout_width="wrap_content"
					android:textColor="#62605D" android:layout_height="wrap_content" />
			</LinearLayout>
		</TableRow>
		<TableRow android:padding="12dp">
			<LinearLayout android:gravity="center"
				android:orientation="vertical" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content">
				<ImageView android:id="@+id/button_settings"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:src="@drawable/icon_auth" />
				<TextView android:id="@+id/text_settings" android:text="@string/settings"
					android:textColor="#62605D" android:layout_width="wrap_content" android:layout_height="wrap_content" />
			</LinearLayout>
			<LinearLayout android:gravity="center"
				android:orientation="vertical" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content">
				<ImageView android:id="@+id/button_exit"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:src="@drawable/icon_exit" />
				<TextView android:text="@string/exit" android:layout_width="wrap_content"
					android:textColor="#62605D" android:layout_height="wrap_content" />
			</LinearLayout>
		</TableRow>
		<TableRow>
			<Button android:text="@string/clear_database" android:id="@+id/button_delete"
				android:layout_weight="1" android:layout_width="0dip"
				android:layout_height="wrap_content" />
			<Button android:text="@string/authorize" android:id="@+id/button_authorize"
				android:layout_weight="1" android:layout_width="0dip"
				android:layout_height="wrap_content" />
		</TableRow>
	</TableLayout>
</LinearLayout>
